<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingHorizontal="30dp"
    tools:context=".OrderDetails">

    <TextView
        android:id="@+id/orderDetailText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/orderDetail"
        android:textColor="#733f0e"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="20dp"
        android:text="@string/orderInfo"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/orderDetailText" />

    <TextView
        android:id="@+id/deliveryText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/pengiriman"
        android:textColor="#733f0e"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/detail" />

    <LinearLayout
        android:id="@+id/CheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/deliveryText"
        tools:layout_editor_absoluteX="30dp">


        <CheckBox
            android:id="@+id/deliveryCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="25dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option1"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/CheckBox2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/CheckBox">

        <CheckBox
            android:id="@+id/deliveryCheckBox2"
            android:layout_width="wrap_content"
            android:layout_height="25dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option2"
            android:textSize="15sp" />
    </LinearLayout>

    <Button
        android:id="@+id/doneBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:backgroundTint="#d52f2f"
        android:text="@string/done"
        app:cornerRadius="5dp"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <LinearLayout
        android:id="@+id/orderMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="25dp"
        android:orientation="vertical"
        android:background="#b7b7b7b7"
        app:layout_constraintTop_toBottomOf="@id/CheckBox2">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="10dp"
            android:paddingVertical="10dp"
            android:text="@string/orderMessage"
            android:textSize="15sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>