<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Home">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#ffffff"
            android:elevation="8dp">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:contentDescription="@string/user_icon"
                android:src="@drawable/user_icon" />

            <TextView
                android:id="@+id/toolbarTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/toolbarTitle"
                android:paddingHorizontal="25dp"
                android:textSize="24sp"
                android:textColor="#000000"
                android:textStyle="bold" />
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/home_store"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/storePhoto"
        android:paddingBottom="10dp"
        android:src="@drawable/main_1"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />

    <RelativeLayout
        android:id="@+id/storeWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingHorizontal="35dp"
        app:layout_constraintTop_toBottomOf="@+id/home_store">

        <TextView
            android:id="@+id/storeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:text="@string/storeText"
            android:textColor="#733f0e"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/storeLocationText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:text="@string/storeLocation"
            android:textColor="#733f0e"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/locationWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:paddingHorizontal="35dp"
        app:layout_constraintTop_toBottomOf="@+id/storeWrapper">

        <TextView
            android:id="@+id/locationText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:text="@string/locationText"
            android:textColor="#733f0e"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/locationInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/locationIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="5dp"
                android:src="@drawable/baseline_location_on_24"
                app:tint="#733f0e" />

            <TextView
                android:id="@+id/locationInputText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/findText"
                android:textColor="#733f0e"
                android:textSize="18sp"
                android:textStyle="bold" />


        </LinearLayout>
    </RelativeLayout>

    <Button
        android:id="@+id/seeMenusBtn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="35dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#d52f2f"
        android:text="@string/btnText"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:textStyle="bold"
        app:cornerRadius="5dp"
        app:layout_constraintTop_toBottomOf="@+id/locationWrapper"
        tools:layout_editor_absoluteX="35dp" />

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"
        >

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:listitem="@layout/cardview_menu"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/seeMenusBtn" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:src="@drawable/ic_add"
            android:layout_margin="16dp"/>
    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>