<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/mainLogo"
        android:layout_width="245dp"
        android:layout_height="260dp"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"/>

    <TextView
        android:id="@+id/storeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Store"
        android:layout_marginHorizontal="35dp"
        android:layout_marginTop="42dp"
        android:textColor="#733f0e"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/mainLogo"/>

    <Spinner
        android:id="@+id/spinnerStore"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="12dp"
        android:elevation="10dp"
        app:layout_constraintTop_toBottomOf="@id/storeText"
        app:layout_editor_absoluteX="30dp"/>

    <TextView
        android:id="@+id/nameText"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/name"
        android:textColor="#733f0e"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginHorizontal="35dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/spinnerStore"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/nameInput"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="35dp"
        android:layout_marginTop="12dp"
        android:hint="@string/nameInputText"
        android:paddingHorizontal="20dp"
        android:textColor="#733f0e"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/nameText"/>

    <Button
        android:id="@+id/submitBtn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="35dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#D52F2F"
        android:text="@string/submitBtn"
        android:textColor="#ffff"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/nameInput"
        app:cornerRadius="5dp"
        app:layout_editor_absoluteX="30dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>